# NannyAI

./: INSTALL.md  LICENSE  README.md  config_manager.py  content_analyzer.py  device_manager.py  main.py  notification_manager.py  program_terminator.py  pyproject.toml  report_generator.py  requirements.txt  screenshot_history.py  screenshot_manager.py  system_tray.py  vnc_device_monitor.py
gui/: dashboard_window.py  device_window.py  main_window.py  settings_window.py  styles.py
utils/: constants.py  logger.py
